library/general/gpusharedmemory/samples/gpu-with-shm/example_init_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-init-container-with-shm
spec:
  volumes:
    - name: dshm
      emptyDir:
        medium: Memory
        sizeLimit: 8Gi
  containers:
    - name: application
      image: nginx:1.25
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 100m
          memory: 128Mi
